# rustinvoice

./: .gitignore  Cargo.toml  output.xml
frontend/: index.html  index.js  loading.css  package.json  webpack.config.js
frontend/modules/: App.js  Autocomplete.js  Customer.js  Customers.js  Import.js  Invoice.js  Invoices.js  Loader.js
frontend/modules/action/: Action.js
frontend/modules/autocomplete/: CustomerSuggest.js
frontend/modules/dto/: Address.js  Customer.js  Invoice.js  InvoiceItem.js
frontend/modules/layout/: Navigation.js  PInput.js
frontend/modules/store/: AutocompleteCustomerStore.js  CustomerStore.js  CustomersStore.js  ImportStore.js  InvoiceStore.js  InvoicesStore.js
src/: main.rs
src/api/: customers.rs  invoices.rs  mod.rs
src/dto/: mod.rs
src/entity/: address.rs  customer.rs  invoice.rs  mod.rs
src/es/: create.rs  id.rs  mod.rs  search.rs
src/format/: mod.rs  pro.rs
src/mapping/: mod.rs
src/nickelplugin/: mod.rs
src/pdf/: mod.rs
src/service/: customer_service.rs  invoice_service.rs  mod.rs  suggest_service.rs
